--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_PASSWORD=
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
