--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_script:
   - cp .env.example .env
   - composer install
   - php artisan key:generate
+  - php artisan migration
 
 script:
   - vendor/bin/phpunit
